--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -1,3 +1,84 @@
+
+@inproceedings{DBLP:conf/eurosys/ShalevS06,
+  author    = {Ori Shalev and
+               Nir Shavit},
+  title     = {Predictive log-synchronization},
+  booktitle = {Proceedings of the 2006 EuroSys Conference, Leuven, Belgium, April
+               18-21, 2006},
+  year      = {2006},
+  pages     = {305--315},
+  crossref  = {DBLP:conf/eurosys/2006},
+  url       = {http://doi.acm.org/10.1145/1217935.1217965},
+  doi       = {10.1145/1217935.1217965},
+  timestamp = {Mon, 10 Nov 2014 08:03:56 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/eurosys/ShalevS06},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@proceedings{DBLP:conf/eurosys/2006,
+  editor    = {Yolande Berbers and
+               Willy Zwaenepoel},
+  title     = {Proceedings of the 2006 EuroSys Conference, Leuven, Belgium, April
+               18-21, 2006},
+  year      = {2006},
+  publisher = {{ACM}},
+  isbn      = {1-59593-322-0},
+  timestamp = {Mon, 10 Nov 2014 08:03:56 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/eurosys/2006},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@inproceedings{Israeli:1994:DIS:197917.198079,
+ author = {Israeli, Amos and Rappoport, Lihu},
+ title = {Disjoint-access-parallel Implementations of Strong Shared Memory Primitives},
+ booktitle = {Proceedings of the Thirteenth Annual ACM Symposium on Principles of Distributed Computing},
+ series = {PODC '94},
+ year = {1994},
+ isbn = {0-89791-654-9},
+ location = {Los Angeles, California, USA},
+ pages = {151--160},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/197917.198079},
+ doi = {10.1145/197917.198079},
+ acmid = {198079},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+
+@misc {levelDB,
+title = {A fast and lightweight key/value database library by Google},
+howpublished= "\url{http://code.google.com/p/leveldb}"
+}
+
+@proceedings{DBLP:conf/popl/2007,
+  editor    = {Martin Hofmann and
+               Matthias Felleisen},
+  title     = {Proceedings of the 34th {ACM} {SIGPLAN-SIGACT} Symposium on Principles
+               of Programming Languages, {POPL} 2007, Nice, France, January 17-19,
+               2007},
+  year      = {2007},
+  publisher = {{ACM}},
+  url       = {http://dl.acm.org/citation.cfm?id=1190216},
+  isbn      = {1-59593-575-4},
+  timestamp = {Mon, 10 Nov 2014 07:58:59 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/popl/2007},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@proceedings{DBLP:conf/oopsla/2011,
+  editor    = {Cristina Videira Lopes and
+               Kathleen Fisher},
+  title     = {Proceedings of the 26th Annual {ACM} {SIGPLAN} Conference on Object-Oriented
+               Programming, Systems, Languages, and Applications, {OOPSLA} 2011,
+               part of {SPLASH} 2011, Portland, OR, USA, October 22 - 27, 2011},
+  year      = {2011},
+  publisher = {{ACM}},
+  isbn      = {978-1-4503-0940-0},
+  timestamp = {Mon, 10 Nov 2014 08:00:07 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/oopsla/2011},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @article{SilberschatzK1980,
  author = {Silberschatz, Abraham and Kedem, Zvi},
  title = {Consistency in Hierarchical Database Systems},
@@ -435,3 +516,29 @@ year = {2010},
  year = {2014},
 }
 
+@article{Afek:1993:ASS:153724.153741,
+ author = {Afek, Yehuda and Attiya, Hagit and Dolev, Danny and Gafni, Eli and Merritt, Michael and Shavit, Nir},
+ title = {Atomic Snapshots of Shared Memory},
+ journal = {J. ACM},
+ issue_date = {Sept. 1993},
+ volume = {40},
+ number = {4},
+ month = sep,
+ year = {1993},
+ issn = {0004-5411},
+ pages = {873--890},
+ numpages = {18},
+ url = {http://doi.acm.org/10.1145/153724.153741},
+ doi = {10.1145/153724.153741},
+ acmid = {153741},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {atomic, consistent state, fault-tolerance, snapshot},
+} 
+
+@inproceedings{clsm-poster,
+title ={Scaling Concurrent Log-Structured Data Stores},
+author = {Edward Bortnikov and Guy Golan-Gueta and Eshcar Hillel and Idit Keidar}, 
+booktitle= {USENIX OSDI poster session},
+year= {2014}
+}
