--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -98,13 +98,13 @@
 We present an \emph{automatic code transformation} for concurrent data structures, 
 which increases their scalability without sacrificing correctness. 
 Our transformation takes lock-based code, and replaces some of the 
-locking steps therein with optimistic synchronization. The main idea is to
+locking steps therein with optimistic synchronization, in order to reduce contention. The main idea is to
 have each operation perform an optimistic traversal of the data structure 
 as long as no shared memory locations are updated, and then proceed with
-the original pessimistic code. The transformed code inherits essential 
+pessimistic code. The transformed code inherits essential 
 properties of the original one, including linearizability, serializability,
-and deadlock freedom. It reduces contention, both on locks and on access
-to shared memory locations. 
+and deadlock freedom. 
+%It reduces contention, both on locks and on access to shared memory locations. 
 %When applying our transformation to 
 %hand-over-hand locking solutions, we obtain significantly superior scalability.  
 
@@ -114,8 +114,8 @@ In essence, we provide a way to optimize such transformations by reducing
 synchronization bottlenecks (for example, locking the root of a tree), 
 yielding a fully automatic approach to parallelize sequential code efficiently. 
 The resulting code scales well and significantly outperforms
-pessimistic approaches. We further compare our transformed code to state-of-the-art 
-custom-tailored data structures implemented by experts. 
+pessimistic approaches. We further compare our automatically synthesized code to state-of-the-art 
+data structures implemented by experts. 
 We find that its performance is comparable, and sometimes even superior, 
 to that achieved by the custom-tailored implementations.
 Our work thus shows the promise that automated approaches
@@ -126,7 +126,7 @@ hand-crafting concurrent data structures.
 
 
 \input{introduction}
-\input{preliminariesB}
+%\input{preliminariesB}
 \input{algorithmB}
 \input{proof2}
 \input{evaluation}
