Evaluation section rewrite (5.1)

--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -129,7 +129,7 @@ hand-crafting concurrent data structures.
 %\input{preliminariesB}
 \input{algorithmB}
 \input{proof2}
-\input{evaluation}
+\input{evaluation2}
 \input{related}
 \input{discussion}
 \appendix
