--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -36,7 +36,7 @@
 \newcommand{\autoTreap}{Auto-Treap\xspace} 
 \newcommand{\danaTree}{LO-Tree\xspace} 
 \newcommand{\danaAVL}{LO-AVL\xspace}
-\newcommand{\bronson}{OPT-Tree\xspace}
+\newcommand{\bronson}{Snap-Tree\xspace}
 \newcommand{\skiplist}{Skip-List\xspace}
 \newcommand{\globalTree}{Lock-Tree\xspace} 
 \newcommand{\globalTreap}{Lock-Treap\xspace}
