--- a/Tex/src/plotsStyle.tex
+++ b/Tex/src/plotsStyle.tex
@@ -32,7 +32,7 @@
 \pgfplotsset{unbalanced/.style={%
 	   width=0.35\textwidth,
        legend columns=-1,
-	   legend entries={\autoTree, \danaTree, \globalTree, \domTree},
+	   legend entries={\autoTree, \danaTree, \domTree, \globalTree},
 	   legend to name=unbalancedLegened,
 }}
 
@@ -40,6 +40,6 @@
 \pgfplotsset{balanced/.style={%
 	   width=0.35\textwidth,
        legend columns=-1,
-	   legend entries={\autoTreap, \danaAVL,\bronson, \skiplist, \globalTreap,
-	   \domTreap}, legend to name=balancedLegened,
+	   legend entries={\autoTreap, \danaAVL,\bronson, \skiplist,
+	   \domTreap, \globalTreap}, legend to name=balancedLegened,
 }}
